<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.myspy.myspyandroid.TabFragment3">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        android:clipChildren="false"
        android:addStatesFromChildren="false"
        android:fillViewport="false"
        android:filterTouchesWhenObscured="false"
        android:isScrollContainer="false"
        android:keepScreenOn="false"
        android:measureAllChildren="false"
        android:fitsSystemWindows="true"
        android:nestedScrollingEnabled="false"
        android:paddingBottom="?android:attr/actionBarSize">


    <LinearLayout
            android:id="@+id/linlayoutsettings"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:layout_marginTop="10dp">


        <Button
                android:text="@string/ChangePassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/button5"
                android:background="@drawable/buttonstylerounded"
                android:textColor="@android:color/white"
                android:onClick="ToChangePassword"/>

            <CheckBox
                android:text="@string/MonitorSMS"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/checkBoxsms"
                android:checked="true"
                android:layout_marginTop="10dp" />

            <CheckBox
                android:text="@string/MonitorCall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/checkBoxcalls"
                android:checked="true"
                android:layout_marginBottom="10dp" />


        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@color/colorBox"
            android:paddingTop="6dp"
            android:paddingBottom="6dp">

            <TextView
                android:text="@string/LocationMonitoring"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView12"
                android:textColor="@android:color/black"
                android:textSize="16sp"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="12dp"
                android:layout_marginBottom="12dp"
                android:layout_marginTop="6dp"
                android:gravity="center" />

            <CheckBox
                android:text="@string/MonitorLocation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/checkBoxlocation"
                android:gravity="center"
                android:layout_marginBottom="10dp" />

            <TextView
                android:text="@string/AccuracyMonitoring"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView16"
                android:gravity="center_horizontal"
                android:textColor="@android:color/black" />

            <SeekBar
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/seekBarAccuracy"
                android:max="2"
                android:progress="1"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp" />

            <TextView
                android:text="@string/Medium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textViewaccuracy"
                android:gravity="center_horizontal"
                android:layout_marginBottom="10dp" />

        </LinearLayout>


        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorMarker">

            <TextView
                android:text="@string/WeatherSettings"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView17"
                android:gravity="center_vertical|center_horizontal"
                android:textSize="16sp"
                android:textColor="@android:color/black" />

            <CheckBox
                android:text="@string/ShowWeatherInfo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/checkBoxshoweather"
                android:checked="true"
                android:layout_marginTop="10dp" />

            <TextView
                android:text="---"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textViewWeatherNameSett"
                android:textColor="@android:color/black"
                android:layout_marginTop="6dp"
                android:layout_marginLeft="8dp" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="6dp"
                android:layout_marginBottom="10dp">

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:ems="10"
                    android:id="@+id/editTextLocationWeather"
                    android:layout_weight="1"
                    android:hint="@string/LocationName" />

                <Button
                    android:text="@string/GetByName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/buttongetbynameweat"
                    android:background="@drawable/buttonstylerounded"
                    android:textColor="@android:color/white"
                    android:layout_marginRight="4dp" />
            </LinearLayout>

            <Button
                android:text="@string/GetLocation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/buttongetautomaticallyweat"
                android:background="@drawable/buttonstylerounded"
                android:textColor="@android:color/white"
                android:layout_marginLeft="6dp" />

            <TextView
                android:text="@string/WeatherUnit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView19"
                android:layout_marginTop="6dp"
                android:textColor="@android:color/black"
                android:layout_marginLeft="8dp" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="8dp">

                <RadioButton
                    android:text="@string/Celsius"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/radioButtonCelsius"
                    android:layout_weight="1"
                    android:checked="true" />

                <RadioButton
                    android:text="@string/Fahrenheit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/radioButtonFahrenheit"
                    android:layout_weight="1" />
            </RadioGroup>
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorBox2"
            android:paddingTop="6dp"
            android:paddingBottom="6dp">

            <CheckBox
                android:text="@string/MonitorApps"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/checkBoxmonitorapps"
                android:checked="true" />

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="10dp"
                android:id="@+id/LinearBlockSettings">

                <CheckBox
                    android:text="@string/BlockSettings"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/checkBoxblocksettings" />

                <Button
                    android:text="@string/BlockApplications"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/button11"
                    android:background="@drawable/buttonstylerounded"
                    android:textColor="@android:color/white"
                    android:onClick="ToBlockApplications"/>
            </LinearLayout>
        </LinearLayout>


        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorBox3"
            android:paddingTop="6dp"
            android:paddingBottom="6dp">

            <TextView
                android:id="@+id/textViewWebHeader"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical|center_horizontal"
                android:text="@string/WebSettings"
                android:textColor="@android:color/black"
                android:textSize="16sp" />

            <CheckBox
                android:id="@+id/checkBoxWebSend"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="false"
                android:text="@string/DataToWeb" />

            <EditText
                android:id="@+id/editTextAlias"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/AliasHint"
                android:inputType="textPersonName"
                android:lines="1" />

            <Button
                android:id="@+id/buttonWebToLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/buttonstylerounded"
                android:onClick="ToWebLogin"
                android:text="@string/Login"
                android:textColor="@android:color/white" />

            <CheckBox
                android:id="@+id/checkBoxWebLoggedin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="false"
                android:clickable="false"
                android:text="@string/Loggedin" />

        </LinearLayout>


        <Button
                android:text="@string/Save"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/button9"
                android:background="@drawable/buttonstylerounded"
                android:textColor="@android:color/white"
                android:onClick="SaveSettings"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp" />


    </LinearLayout>

    </ScrollView>

</FrameLayout>
