<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/login"
        android:scaleType="centerCrop" />

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_change_password"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.myspy.myspyandroid.ChangePasswordActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_height="wrap_content"
        android:background="#7AFFFFFF"
        android:layout_width="match_parent"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true">

        <TextView
            android:text="@string/ChangePassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView18"
            android:gravity="center"
            android:textColor="@android:color/black"
            android:textSize="20sp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/editTextoldpassword"
            android:hint="@string/OldPassword"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/editTextnewpassword"
            android:layout_marginTop="16dp"
            android:hint="@string/NewPassword"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/editTextnewpasswordrepeat"
            android:hint="@string/NewPasswordRepeat"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp" />

        <Button
            android:text="@string/ChangePassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/button10"
            android:layout_marginTop="20dp"
            android:background="@drawable/buttonstylerounded"
            android:textColor="@android:color/white"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:textSize="16sp"
            android:onClick="ChangePassword" />
    </LinearLayout>
</RelativeLayout>
</RelativeLayout>